# kanban-app

./: .gitignore  README.md  cookies.txt  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  nginx.conf  otel-collector-config.yaml
.github/workflows/: ci.yml
apps/auth/: pyproject.toml
apps/auth/app/: main.py
apps/auth/app/api/v1/: routes.py  users.py
apps/auth/app/core/: config.py  security.py
apps/auth/app/db/: base.py
apps/auth/app/dependencies/: auth.py
apps/auth/app/models/: refresh_token.py  user.py
apps/auth/app/schemas/: user.py
apps/auth/app/services/: auth.py  refresh_tokens.py
apps/auth/migrations/: env.py
apps/auth/migrations/versions/: 661c3727369b_add_refresh_token_iat_to_users_table.py
apps/auth/tests/: conftest.py  test_auth.py
docker-entrypoint-initdb.d/: init-multiple-databases.sh
docker/prometheus/: prometheus.yml
scripts/: start-machines.sh
services/auth/: .dockerignore  Dockerfile  README.md  alembic.ini  fly.toml  pyproject.toml  start.sh  wait-for-postgres.sh
services/auth/app/: logging_config.py  main.py  seeds.py
services/auth/app/api/v1/: users.py
services/auth/app/core/: config.py  metrics.py  security.py
services/auth/app/db/: base.py  session.py
services/auth/app/dependencies/: auth.py
services/auth/app/models/: refresh_token.py  user.py
services/auth/app/schemas/: enums.py  user.py
services/auth/app/services/: auth.py  refresh_tokens.py
services/auth/migrations/versions/: 0383d2ebc0db_add_server_defaults_to_timestamps.py  2170672673f4_restore_missing_revision.py  466a5edc2e6e_create_users_table.py  56e9b5c736da_add_userrole_enum.py  58737c44b10b_replace_token_with_jti_in_refresh_tokens.py  5de54a12606d_add_role_field_to_user.py  7147f127b477_replace_refresh_token_iat_with_last_.py  a206b3f11909_create_users_table.py  e95a4517c72b_add_refresh_tokens_table.py
services/auth/tests/: conftest.py  test_auth.py
services/board/: Dockerfile  README.md  fly.toml  jest.config.ts  package-lock.json  package.json  tsconfig.json
services/board/prisma/: schema.prisma
services/board/scripts/: resetDemoData.ts
services/board/src/: index.ts  logger.ts  metrics.ts  otel.ts  swagger.ts
services/frontend/: Dockerfile  README.md  fly.toml  nginx.conf  nginx.prod.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+67 files in other folders)
