[project]
name = "auth"
version = "0.1.0"
description = ""
authors = [
    {name = "Raul Fernandez",email = "rafeye20@hotmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pydantic[email] (>=2.11.5,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "bcrypt (==3.2.0)",
    "prometheus-fastapi-instrumentator>=5.10,<6.0.0",
    "opentelemetry-api>=1.22,<2.0.0",
    "opentelemetry-sdk>=1.22,<2.0.0",
    "opentelemetry-instrumentation-fastapi>=0.40,<1.0.0",
    "opentelemetry-exporter-otlp>=1.22,<2.0.0",
    "python-json-logger (>=3.3.0,<4.0.0)",
    "opentelemetry-instrumentation-sqlalchemy (>=0.55b1,<0.56)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.34.3"}
pytest = "^8.4.0"
httpx = "^0.28.1"
pytest-asyncio = "^1.0.0"

[tool.poetry]
package-mode = false


